# Pinwheel

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
demo/: pinwheel_demo 2.md  pinwheel_demo.md  teleprompter.md  video_demo.md
docs/: ACCEPTANCE_CRITERIA.md  AI-IDEAS-02-14.md  API_ARCHITECTURE.md  CODE_REVIEW_2026-02-20.md  COLOPHON.md  DEMO_MODE.md  DEMO_VIDEO_OUTLINE.md  DEV_LOG.md  DEV_LOG_2026-02-10.md  DEV_LOG_2026-02-11.md  DEV_LOG_2026-02-12.md  DEV_LOG_2026-02-13.md  EFFECTS_SYSTEM.md  ELAM_ENDING.md  GAME_LOOP.md  GLOSSARY.md  GOVERNANCE_EVENTS.md  INSTRUMENTATION.md  INTERFACE_CONTRACTS.md  NEW_GOVERNOR_GUIDE.md  OPS.md  PLAN.md  PLAYER.md  PRODUCT_OVERVIEW.md  RUN_OF_PLAY.md  SECURITY.md  SIMULATION.md  TABLE_OF_CONTENTS.md  TECH_ARCHITECTURE.md  TEST_SUITE_PRUNING_PLAN.md  UX_NOTES.md  VIEWER.md  VISION.md  final_retro.md
docs/dev_log/: DEV_LOG.md  DEV_LOG_2026-02-11.md  DEV_LOG_2026-02-14.md  DEV_LOG_2026-02-15.md  DEV_LOG_2026-02-17.md  DEV_LOG_2026-02-18.md  DEV_LOG_2026-02-24.md  SESSION_114_INTERPRETER_FIX_REPORT.md  UX_NOTES.md
docs/plans/: 2026-02-10-feat-league-configuration-plan.md  2026-02-11-database-schema-plan.md  2026-02-11-day1-implementation-plan.md  2026-02-11-discord-bot-plan.md  2026-02-11-frontend-plan.md  2026-02-11-page-designs.md  2026-02-11-presenter-plan.md  2026-02-11-season-lifecycle-plan.md  2026-02-11-simulation-extensibility-plan.md  (+84 more)
scripts/: add_what_changed.py  cancel_duplicate_proposals.py  demo_seed.py  fix_enrollments.py  migrate_add_meta.py  prod_reseed.py  refund_stuck_proposals.py  resubmit_proposals.py  resubmit_proposals_v2.py  run_demo.sh  run_video_demo.sh
templates/: base.html
tests/: conftest.py  test_action_registry.py  test_admin_auth.py  test_admin_perf.py  test_admin_review.py  test_admin_workbench.py  test_ai_costs.py  test_amendment.py  test_auth.py  test_bot_search.py  test_charts.py  test_classifier.py  test_codegen.py  test_codegen_admin.py  test_codegen_council.py  test_codegen_hardening.py  test_codegen_integration.py  test_codegen_lifecycle.py  test_codegen_pipeline.py  test_commentary.py  test_config.py  test_db.py  test_deferred_interpreter.py  test_discord.py  test_drama.py  test_effects.py  test_event_bus.py  test_expanded_ruleset.py  test_follow.py  test_game_def_effects.py  test_game_definition_patch.py  test_game_loop.py  test_governance.py  test_insights.py  test_instrumentation.py  test_memorial.py  test_messages_api.py  test_milestones.py  test_mirrors.py  test_models.py  (+25 more)
(+168 files in other folders)
