[project]
name = "pinwheel"
version = "0.1.0"
description = "Simulated 3v3 basketball league with human-driven, AI-interpreted governance and rules"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "anthropic>=0.42",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "sse-starlette>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "discord.py>=2.4",
    "authlib>=1.3",
    "itsdangerous>=2.1",
    "markdown>=3.5",
    "nh3>=0.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "httpx",
]
discord = [
    "discord.py>=2.4",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: large-sample stochastic tests (run with -m slow)"]
